# homebridge-tapo

./: .gitignore  Cargo.toml  README.md  config.schema.json  index.d.ts  index.js  package-lock.json  package.json
.github/workflows/: ci.yml  publish.yml
js/: index.js  platform.js
js/accessories/: colorLight.js  light.js  plug.js  powerStrip.js
src/: discovery.rs  handlers.rs  lib.rs
