[package]
name = "homebridge-tapo"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi6", "async", "serde-json"] }
napi-derive = "2"
tapo = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = "0.1"
log = "0.4"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
